export type AccountStatus = 'ACTIVATED' | 'CREATED' | 'SUSPENDED';
