export type OperationType = 'CREDIT' | 'DEBIT';
